[package]
name = "esp32s2-wifi-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main", features = [
  "esp32s2",
  "unstable",
] }

esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main", features = [
  "esp32s2",
  "panic-handler",
  "println",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main", features = [
  "esp32s2",
] }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main", features = [
  "esp32s2",
  "wifi",
] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
